[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Utils/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Enemies/JellyKering/States/Dead.gd" type="Script" id=2]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/idle/jellyidle3.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/JellyKering/States/Move.gd" type="Script" id=4]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/idle/jellyidle1.png" type="Texture" id=5]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/idle/jellyidle2.png" type="Texture" id=6]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/death/jelly-death4.png" type="Texture" id=7]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/death/jelly-death2.png" type="Texture" id=8]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/death/jelly-death1.png" type="Texture" id=9]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/death/jelly-death5.png" type="Texture" id=10]
[ext_resource path="res://Assets/JellyKering-20201022T141405Z-001/JellyKering/death/jelly-death3.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Enemies/JellyKering/JellyKeringNew.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Collider:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../HitBox/Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.002, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../HitBox/Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "move"

[sub_resource type="AnimationNodeTransition" id=6]
input_count = 2
input_0/name = "move"
input_0/auto_advance = false
input_1/name = "dead"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=7]
graph_offset = Vector2( -306.815, 191.095 )
nodes/Dead/node = SubResource( 4 )
nodes/Dead/position = Vector2( -100, 240 )
nodes/Move/node = SubResource( 5 )
nodes/Move/position = Vector2( -100, 120 )
nodes/States/node = SubResource( 6 )
nodes/States/position = Vector2( 120, 120 )
node_connections = [ "output", 0, "States", "States", 0, "Move", "States", 1, "Dead" ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 139.117, 294.93 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 196.282, 374.972 )

[node name="JellyKering" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
collision_layer = 3
collision_mask = 0
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/move = SubResource( 3 )

[node name="Animator" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../Sprite/Animation")
active = true
parameters/States/current = 0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -4.75696, 120 )
shape = SubResource( 8 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 0

[node name="Collider" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 42.3785 )
shape = SubResource( 9 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
